--- a/notebooks/Get Tech Data.ipynb
+++ b/notebooks/Get Tech Data.ipynb
@@ -2,14 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e3efc514",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-10-06 17:49:43.067\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mpantheon.config\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mPROJ_ROOT path is: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "import investpy \n",
     "import pandas as pd\n",
     "import time\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "\n",
     "import sys, os\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
@@ -19,59 +30,305 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "8f22e922",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "📥 Downloading data for BBAS3.SA...\n",
-      "❌ Failed to download BBAS3.SA: ERR#0015: error 403, try again later.\n",
+      "✅ Data for BBAS3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\BBAS3.csv\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "📥 Downloading data for ITUB4.SA...\n",
-      "❌ Failed to download ITUB4.SA: ERR#0015: error 403, try again later.\n",
+      "✅ Data for ITUB4.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\ITUB4.csv\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "📥 Downloading data for BBDC4.SA...\n",
-      "❌ Failed to download BBDC4.SA: ERR#0015: error 403, try again later.\n",
+      "✅ Data for BBDC4.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\BBDC4.csv\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "📥 Downloading data for B3SA3.SA...\n",
-      "❌ Failed to download B3SA3.SA: ERR#0015: error 403, try again later.\n",
+      "✅ Data for B3SA3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\B3SA3.csv\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "📥 Downloading data for BPAC11.SA...\n",
-      "❌ Failed to download BPAC11.SA: ERR#0015: error 403, try again later.\n",
+      "✅ Data for BPAC11.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\BPAC11.csv\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "📥 Downloading data for PETR4.SA...\n",
-      "❌ Failed to download PETR4.SA: ERR#0015: error 403, try again later.\n",
+      "✅ Data for PETR4.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\PETR4.csv\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "📥 Downloading data for PRIO3.SA...\n",
-      "❌ Failed to download PRIO3.SA: ERR#0015: error 403, try again later.\n",
+      "✅ Data for PRIO3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\PRIO3.csv\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "📥 Downloading data for ELET3.SA...\n",
-      "❌ Failed to download ELET3.SA: ERR#0015: error 403, try again later.\n",
+      "✅ Data for ELET3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\ELET3.csv\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "📥 Downloading data for ENEV3.SA...\n",
-      "❌ Failed to download ENEV3.SA: ERR#0015: error 403, try again later.\n",
+      "✅ Data for ENEV3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\ENEV3.csv\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "📥 Downloading data for EQTL3.SA...\n",
-      "❌ Failed to download EQTL3.SA: ERR#0015: error 403, try again later.\n",
+      "✅ Data for EQTL3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\EQTL3.csv\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "📥 Downloading data for VALE3.SA...\n",
-      "❌ Failed to download VALE3.SA: ERR#0015: error 403, try again later.\n",
+      "✅ Data for VALE3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\VALE3.csv\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "📥 Downloading data for ABEV3.SA...\n",
-      "❌ Failed to download ABEV3.SA: ERR#0015: error 403, try again later.\n",
+      "✅ Data for ABEV3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\ABEV3.csv\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "📥 Downloading data for EMBR3.SA...\n",
-      "❌ Failed to download EMBR3.SA: ERR#0015: error 403, try again later.\n",
+      "✅ Data for EMBR3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\EMBR3.csv\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "📥 Downloading data for CSAN3.SA...\n",
-      "❌ Failed to download CSAN3.SA: ERR#0015: error 403, try again later.\n",
+      "✅ Data for CSAN3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\CSAN3.csv\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "📥 Downloading data for WEGE3.SA...\n",
-      "❌ Failed to download WEGE3.SA: ERR#0015: error 403, try again later.\n",
-      "\n",
+      "✅ Data for WEGE3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\WEGE3.csv\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "🏁 Done! All files have been successfully generated.\n"
      ]
@@ -82,10 +339,10 @@
     "output_dir = \"stocks_rawdata_10y\"\n",
     "os.makedirs(RAW_DATA_DIR / output_dir, exist_ok=True)\n",
     "\n",
-    "start_date = \"05/10/2015\"\n",
-    "end_date = \"05/10/2025\"\n",
+    "import yfinance as yf\n",
     "\n",
-    "all_stocks = investpy.stocks.get_stocks_list(country=\"brazil\")\n",
+    "start_date = \"2015-10-05\"\n",
+    "end_date = \"2025-10-05\"\n",
     "\n",
     "# Função para limpar ticker\n",
     "def clean_ticker(ticker):\n",
@@ -96,45 +353,45 @@
     "    try:\n",
     "        print(f\"📥 Downloading data for {ticker}...\")\n",
     "\n",
-    "        search_name = clean_ticker(ticker)\n",
-    "\n",
-    "        # Encontrar nome do ativo no Investing.com\n",
-    "        matched_stocks = [stock for stock in all_stocks if search_name in stock.upper()]\n",
-    "\n",
-    "        if not matched_stocks:\n",
-    "            print(f\"⚠️ No matching name found for {ticker}. Skipping.\\n\")\n",
-    "            continue\n",
-    "\n",
-    "        stock_name = matched_stocks[0]\n",
-    "\n",
-    "        df = investpy.stocks.get_stock_historical_data(\n",
-    "            stock=stock_name,\n",
-    "            country=\"brazil\",\n",
-    "            from_date=start_date,\n",
-    "            to_date=end_date,\n",
-    "            interval=\"Daily\"\n",
-    "        )\n",
+    "        # Download com yfinance\n",
+    "        df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
     "\n",
     "        if df.empty:\n",
     "            print(f\"⚠️ No data found for {ticker}. Skipping.\\n\")\n",
     "            continue\n",
     "\n",
+    "        # Resetar índice (Date vira coluna)\n",
     "        df.reset_index(inplace=True)\n",
     "\n",
-    "        # Caminho do arquivo\n",
-    "        filepath = RAW_DATA_DIR / f\"{ticker.replace('.SA','')}.xlsx\"\n",
+    "        # Se houver MultiIndex nas colunas, achatar\n",
+    "        df.columns = [\n",
+    "            '_'.join(col).strip() if isinstance(col, tuple) else col\n",
+    "            for col in df.columns\n",
+    "        ]\n",
     "\n",
-    "        # Salva no Excel\n",
-    "        df.to_excel(filepath, index=False)\n",
+    "        # Remover o ticker e o \".SA\" dos nomes das colunas\n",
+    "        df.columns = [\n",
+    "            col.replace(f\"_{ticker}\", \"\").replace(\".SA\", \"\")\n",
+    "            for col in df.columns\n",
+    "        ]\n",
+    "\n",
+    "        # Corrigir o nome da coluna Date_\n",
+    "        df.columns = [col.replace(\"Date_\", \"Date\") for col in df.columns]\n",
+    "\n",
+    "        # Caminho do arquivo CSV\n",
+    "        filepath = RAW_DATA_DIR / output_dir / f\"{ticker.replace('.SA','')}.csv\"\n",
+    "\n",
+    "        # Salvar CSV\n",
+    "        df.to_csv(filepath, index=False)\n",
     "\n",
     "        print(f\"✅ Data for {ticker} saved to: {filepath}\\n\")\n",
     "\n",
     "        time.sleep(5)\n",
-    "        \n",
+    "\n",
     "    except Exception as e:\n",
     "        print(f\"❌ Failed to download {ticker}: {e}\\n\")\n",
     "\n",
-    "print(\"\\n🏁 Done! All files have been successfully generated.\")"
+    "print(\"\\n🏁 Done! All files have been successfully generated.\")\n"
    ]
   }
  ],
