Testing Fundamental Data WebScraping

--- a/notebooks/Get Tech Data.ipynb
+++ b/notebooks/Get Tech Data.ipynb
@@ -5,18 +5,9 @@
    "execution_count": null,
    "id": "e3efc514",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2025-10-06 17:49:43.067\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mpantheon.config\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mPROJ_ROOT path is: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import investpy \n",
-    "import pandas as pd\n",
+    "import yfinance as yf\n",
     "import time\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -25,12 +16,12 @@
     "import sys, os\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
     "\n",
-    "from pantheon.config import RAW_DATA_DIR, TICKERS"
+    "from pantheon.config import RAW_DATA_DIR, TICKERS, START_DATE, END_DATE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8f22e922",
    "metadata": {},
    "outputs": [
@@ -38,8 +29,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
       "[*********************100%***********************]  1 of 1 completed"
      ]
     },
@@ -56,293 +45,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📥 Downloading data for ITUB4.SA...\n",
-      "✅ Data for ITUB4.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\ITUB4.csv\n",
       "\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📥 Downloading data for BBDC4.SA...\n",
-      "✅ Data for BBDC4.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\BBDC4.csv\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📥 Downloading data for B3SA3.SA...\n",
-      "✅ Data for B3SA3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\B3SA3.csv\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📥 Downloading data for BPAC11.SA...\n",
-      "✅ Data for BPAC11.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\BPAC11.csv\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📥 Downloading data for PETR4.SA...\n",
-      "✅ Data for PETR4.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\PETR4.csv\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📥 Downloading data for PRIO3.SA...\n",
-      "✅ Data for PRIO3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\PRIO3.csv\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📥 Downloading data for ELET3.SA...\n",
-      "✅ Data for ELET3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\ELET3.csv\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📥 Downloading data for ENEV3.SA...\n",
-      "✅ Data for ENEV3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\ENEV3.csv\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📥 Downloading data for EQTL3.SA...\n",
-      "✅ Data for EQTL3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\EQTL3.csv\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📥 Downloading data for VALE3.SA...\n",
-      "✅ Data for VALE3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\VALE3.csv\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📥 Downloading data for ABEV3.SA...\n",
-      "✅ Data for ABEV3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\ABEV3.csv\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📥 Downloading data for EMBR3.SA...\n",
-      "✅ Data for EMBR3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\EMBR3.csv\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📥 Downloading data for CSAN3.SA...\n",
-      "✅ Data for CSAN3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\CSAN3.csv\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6692\\3398146825.py:20: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📥 Downloading data for WEGE3.SA...\n",
-      "✅ Data for WEGE3.SA saved to: C:\\Users\\User\\Documents\\GitHub\\pantheon-quant\\data\\raw\\stocks_rawdata_10y\\WEGE3.csv\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "🏁 Done! All files have been successfully generated.\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 52\u001b[0m\n\u001b[0;32m     48\u001b[0m     df\u001b[38;5;241m.\u001b[39mto_csv(filepath, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m     50\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m✅ Data for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mticker\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m saved to: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilepath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 52\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     54\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m     55\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m❌ Failed to download \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mticker\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "# Create the main output directory\n",
-    "output_dir = \"stocks_rawdata_10y\"\n",
+    "output_dir = \"tech_rawdata\"\n",
     "os.makedirs(RAW_DATA_DIR / output_dir, exist_ok=True)\n",
     "\n",
-    "import yfinance as yf\n",
-    "\n",
-    "start_date = \"2015-10-05\"\n",
-    "end_date = \"2025-10-05\"\n",
     "\n",
     "# Função para limpar ticker\n",
     "def clean_ticker(ticker):\n",
@@ -354,7 +76,7 @@
     "        print(f\"📥 Downloading data for {ticker}...\")\n",
     "\n",
     "        # Download com yfinance\n",
-    "        df = yf.download(ticker, start=start_date, end=end_date, interval=\"1d\")\n",
+    "        df = yf.download(ticker, start=START_DATE, end=END_DATE, interval=\"1d\")\n",
     "\n",
     "        if df.empty:\n",
     "            print(f\"⚠️ No data found for {ticker}. Skipping.\\n\")\n",
